# expressions

./: LICENSE  meson.build
include/expressions/: expression.h  expressions.h  operators.h  term.h  term_parent.h  variable.h
source/: addition_term.cpp  addition_term.h  common.h  constant_term.cpp  constant_term.h  division_term.cpp  division_term.h  expression.cpp  multiplication_term.cpp  multiplication_term.h  negation_term.cpp  negation_term.h  operators.cpp  subtraction_term.cpp  subtraction_term.h  term.cpp  term_parent.cpp  variable.cpp  variable_term.cpp  variable_term.h
